<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>cz.vutbr.fit</groupId>
	<artifactId>webstorm</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>webstorm</name>
	<url></url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>github-releases</id>
			<url>http://oss.sonatype.org/content/repositories/github-releases/</url>
		</repository>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>http://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>project.local</id>
			<name>project</name>
			<url>file:${project.basedir}/repo</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.fit.burgetr.webstorm.topologies.RssMonitorTopology</mainClass>
						</manifest>
					</archive>
					<finalName>webstorm</finalName>
					<appendAssemblyId>true</appendAssemblyId>
				</configuration>
				<executions>
				  <execution>
					<id>make-assembly</id>
                                        <!-- bind to the packaging phase -->
					<phase>package</phase> 
					<goals>
						<goal>single</goal>
					</goals>
				  </execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.7.2</version>
		</dependency>
	    <dependency>
			<groupId>com.github.kzwang</groupId>
			<artifactId>lire</artifactId>
			<version>0.9.4-kzwang-beta1</version>
		</dependency>
		<dependency>
            <artifactId>lucene-core</artifactId>
            <groupId>org.apache.lucene</groupId>
            <type>jar</type>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <artifactId>lucene-analyzers-common</artifactId>
            <groupId>org.apache.lucene</groupId>
            <type>jar</type>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <artifactId>lucene-queryparser</artifactId>
            <groupId>org.apache.lucene</groupId>
            <type>jar</type>
            <version>4.2.0</version>
        </dependency>
        <dependency>
			<groupId>com.sangupta</groupId>
			<artifactId>jopensurf</artifactId>
			<version>1.0.0</version>
		</dependency>
        <dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>8.4-702.jdbc4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-tdb</artifactId>
			<version>1.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.storm</groupId>
		    <artifactId>storm-core</artifactId>
		    <version>2.0.0</version>
		    <!--<version>1.1.3</version>-->
			<!-- use 'provided' to keep storm out of the jar-with-dependencies -->
		    <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>edu.stanford.nlp</groupId>
			<artifactId>stanford-corenlp</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.rometools</groupId>
			<artifactId>rome-fetcher</artifactId>
			<version>1.2</version>
		</dependency>		
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.175</version>
		</dependency>		
		<dependency>
			<groupId>net.sf.cssbox</groupId>
			<artifactId>cssbox</artifactId>
			<version>4.6-SNAPSHOT</version>
			<!--<version>5.0-SNAPSHOT</version>-->
		</dependency>
		<dependency>
			<groupId>net.sf.cssbox</groupId>
			<artifactId>pdf2dom</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.cssbox</groupId>
			<artifactId>jstyleparser</artifactId>
			<version>1.16</version>
			<!-- <version>3.6-SNAPSHOT</version> -->
		</dependency>
		<dependency>
			<groupId>cz.vutbr.fit.burgetr</groupId>
			<artifactId>layout</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>cz.vutbr.fit.monitoring</groupId>
			<artifactId>Monitoring</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		  </dependency>
		<dependency> 
			<!-- Xerces was required from Storm 2.0.0 up -->
		    <groupId>xerces</groupId>
		    <artifactId>xercesImpl</artifactId>
		    <version>2.11.0</version>
		</dependency>
	</dependencies>
</project>
